[package]
name = "rnas"
version = "0.1.0"
edition = "2021"
authors = ["nitrescov <nitrescov@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
sha2 = "0.10"
md-5 = "0.10"
rpassword = "7"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["secrets", "tls", "mtls"] }
