[package]
name = "rnas"
version = "0.1.5"
edition = "2021"
authors = ["nitrescov <nitrescov@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
sha2 = "0.10"
md-5 = "0.10"
rpassword = "7.4"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5", features = ["secrets", "tls", "mtls"] }
